sample/TypeError/t02.txt
Traceback (most recent call last):
  File "/home/sano_anju/01/sample/TypeError/t02.py", line 9, in <module>
    birthday = dt.strptime(map.get["birthday"], "%Y/%m/%d")
                           ~~~~~~~^^^^^^^^^^^^
TypeError: 'builtin_function_or_method' object is not subscriptable